# Qt-Infotainment

./: CMakeLists.txt  Infortainment.pro  README.md  main.cpp  main.qml  qml.qrc
.qtcreator/: Infortainment.pro.user.cb0a2fd
Communication/: CAN_Message.cpp  CAN_Message.h  cancontroller.cpp  cancontroller.h  sim_can.py
Controllers/: audiovolum.cpp  audiovolum.h  hvachandler.cpp  hvachandler.h  inforbarclass.cpp  inforbarclass.h  system.cpp  system.h
ui/BottomBar/: BottomBar.qml  HVACComponent.qml  VolumLevelComponent.qml
ui/LeftScreen/: Gauge.qml  GearSelector.qml  InforBar.qml  LeftScreen.qml
ui/RightScreen/: MapRightScreen.qml  NavigationSearch.qml  RightScreen.qml
